--- a/styling/styles-pages.css
+++ b/styling/styles-pages.css
@@ -11,7 +11,7 @@
 	box-shadow: inset -2px 2px 6px rgba(from var(--shadow-color) r g b / 0.2);
 
 	transition-property: opacity, filter;
-	transition-duration: 120ms;
+	transition-duration: var(--trans-dur-on-fast);
 	transition-timing-function: ease-in;
 
 	scrollbar-color: hsl(from var(--theme-color) h s 15%) hsl(from var(--theme-color) h s 8%);
@@ -40,7 +40,7 @@
 	outline-offset: -2px;
 
 	box-shadow: -1px 1px 3px rgba(from var(--shadow-color) r g b / 0.15);
-	background-color: hsl(from var(--theme-color) h s 14%);
+	background-color: hsl(from var(--theme-color) h s 18%);
 
 	transition-property: background-color, box-shadow, opacity, outline-color, scale;
 	transition-duration: var(--trans-dur-on-fast);
@@ -53,7 +53,7 @@
 	opacity: 100%;
 
 	box-shadow: -2px 2px 6px rgba(from var(--shadow-color) r g b / 0.15);
-	background-color: hsl(from var(--theme-color) h s 15%);
+	background-color: hsl(from var(--theme-color) h s 24%);
 }
 
 
@@ -720,13 +720,13 @@
 
 .setting-root-on > i
 {
-	color: hsl(from var(--theme-color) h s 95%);
-	text-shadow: 0px 0px 6px var(--theme-color);
+	color: hsl(from var(--glow-color) h s 95%);
+	text-shadow: 0px 0px 6px var(--glow-color);
 }
 
 .setting-root-on:hover > span
 {
-	color: hsl(from var(--theme-color) h s 95%);
+	color: hsl(from var(--glow-color) h s 95%);
 }
 
 
